fix files word wrap

--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@ div {
 	grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
 }
 div a {
+	word-wrap: break-word;
 	padding: .5em;
 }
 a {
